--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #0f1b4c;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -13,6 +17,7 @@ body {
 /* COMMON */
 .content {
     width: 1110px;
+    max-width: calc(100% - 48px);
     margin-left: auto;
     margin-right: auto;
 }
@@ -24,8 +29,8 @@ a {
 .btn {
     display: inline-block;
     min-width: 98px;
-    border-radius: 8px;
-    background: #0f1b4c;
+    border-radius: 16px;
+    background: var(--primary-color);
     font-size: 1.4rem;
     font-weight: 500;
     text-align: center;
@@ -33,9 +38,25 @@ a {
     color: #fff;
 }
 
+.btn:hover {
+    opacity: 0.9;
+}
+
+p {
+    color: #5a6473;
+}
+
+.line-clamp {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: var(--line-clamp, 2);
+}
 /* HEADER */
 
 header {
+    position: relative;
     height: 100vh;
     background-color: #e6f0ff;
 }
@@ -62,12 +83,291 @@ header {
     padding: 8px 1.4rem;
 }
 
+.navbar ul a:hover {
+    text-decoration: underline;
+}
+
 .actions .action-link {
     font-size: 1.4rem;
     font-weight: 500;
     text-align: left;
+    color: var(--primary-color);
 }
 
 .navbar .action-btn {
     padding: 13px 16px;
+    margin-left: 18px;
+    border-radius: 8px;
+}
+
+/* hero */
+
+.hero {
+    width: 52.6%;
+    margin-top: 130px;
+}
+
+.hero .sub-title {
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+    text-align: left;
+}
+
+.hero .title {
+    margin-top: 8px;
+    font-size: 6.4rem;
+    font-weight: 700;
+    line-height: 1.19;
+}
+
+.hero .desc {
+    margin-top: 30px;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.78;
+}
+
+.hero .btn-cta {
+    margin-top: 40px;
+    min-width: 170px;
+}
+
+.hero .hero-img {
+    position: absolute;
+    bottom: 0;
+    right: calc((100vw - 1110px) / 2 - 100px);
+}
+
+/* ============== Clients ============ */
+.clients {
+    margin-top: 70px;
+    padding: 40px 0;
+}
+.clients .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.clients .row-desc {
+    margin-top: 23px;
+}
+
+.clients .row-desc p {
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.25;
+}
+
+.clients .row-img {
+    margin-top: 70px;
+}
+
+/* ============= Guides ============= */
+.guides {
+    padding: 80px;
+    margin: 40px 0;
+}
+
+.guides .sub-title {
+    position: relative;
+    font-size: 3.5rem;
+    font-weight: 600;
+    line-height: 1;
+    text-align: center;
+}
+
+.guides .sub-title::before {
+    position: absolute;
+    content: '';
+    width: 41px;
+    height: 4px;
+    border-radius: 12px;
+    background: #000;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.guides .desc {
+    width: 459px;
+    max-width: 100%;
+    margin: 20px auto 0;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2;
+    text-align: center;
+}
+
+.list-guide {
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.guide-item {
+    margin: 0 70px;
+    text-align: center;
+}
+
+.guide-item p {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.1;
+    margin-top: 26px;
+}
+
+.guide-item a {
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.5;
+    margin-top: 9px;
+    display: inline-block;
+    color: #0689ff;
+}
+
+.guide-item a .arow-right {
+    margin-left: 8px;
+}
+
+.guide-cta {
+    margin-top: 48px;
+    display: flex;
+    justify-content: center;
+}
+
+.guide-cta .btn {
+    min-width: 170px;
+}
+
+/* ============= Featured ================= */
+.featured {
+    margin: 40px 0;
+    padding: 110px;
+    background-color: #eff6ff;
+}
+
+.featured .sub-title {
+    font-size: 3.5rem;
+    font-weight: 600;
+    line-height: 1;
+    color: #000339;
+}
+
+.featured .desc {
+    margin-top: 15px;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+
+.featured .link {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    color: #0689ff;
+}
+
+.featured .link .thub {
+    vertical-align: middle;
+    margin-left: 6px;
+}
+
+.featured .row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.featured .list {
+    margin-top: 68px;
+    display: flex;
+    gap: 30px;
+}
+
+.featured .item {
+    flex: 1;
+    background-color: #fff;
+    border-radius: 12px;
+}
+
+.featured .item > a .thub {
+    width: 100%;
+    height: 277px;
+    object-fit: cover;
+    object-position: 0 70%;
+    border-radius: 12px 12px 0 0;
+}
+
+.featured .item .body {
+    padding: 17px 20px;
+}
+
+.featured .body .title a {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1.5;
+    color: #000339;
+    word-break: break-all;
+}
+
+.featured .body .desc {
+    --line-clamp: 3;
+    margin-top: 11px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.5;
+    word-break: break-all;
+}
+
+.featured .body .info {
+    margin-top: 21px;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+}
+
+.featured .body .info .icon ~ .icon {
+    margin-left: 22px;
+}
+
+.featured .body .label {
+    margin-left: 8px;
+}
+
+/* Stast */
+
+.stast {
+    padding: 50px 0;
+    margin: 75px 0;
+}
+.stast .row {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.stast .row .img-block img {
+    width: 400px;
+    height: 480px;
+    display: block;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.stast .row .info {
+    width: 309px;
+    margin: 80px 0 0 30px;
+}
+
+.stast .info .title {
+    font-size: 3.5rem;
+    font-weight: 600;
+    line-height: 1.28;
+}
+
+.stast .info .desc {
+    margin-top: 20px;
+    font-size: 1.6;
+    font-weight: 400;
+    line-height: 1.87;
 }
